asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__stash__stash_working_tree_when_everything_is_staged.snap
---
source: asyncgit/src/lib/tui/git/tests/stash.rs
assertion_line: 48
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
▌Staged changes (2)                                                             |
▌added      file-one…                                                           |
▌added      file-two                                                            |
▌@@ -0,0 +1 @@                                                                  |
▌+blahonga                                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
! Cannot stash: working tree is empty                                           |
styles_hash: 63b511dc3e3d43c1
